Adds imgix example

--- a/netlify.toml
+++ b/netlify.toml
@@ -10,4 +10,5 @@
   [headers.values]
   accept-ch = "sec-ch-viewport-width, sec-ch-width, sec-ch-dpr, ect"
   link = "<https://4blf1emx.cdn.imgeng.in/>; rel=preconnect"
-  permissions-policy = ''' ch-viewport-width=("https://4blf1emx.cdn.imgeng.in"), ch-width=("https://4blf1emx.cdn.imgeng.in"), ch-dpr=("https://4blf1emx.cdn.imgeng.in"), ect=("https://4blf1emx.cdn.imgeng.in")'''
+  link = "<https://bryansandbox.imgix.net/>; rel=preconnect"
+  permissions-policy = ''' ch-viewport-width=("https://4blf1emx.cdn.imgeng.in", "https://bryansandbox.imgix.net"), ch-width=("https://4blf1emx.cdn.imgeng.in", "https://bryansandbox.imgix.net"), ch-dpr=("https://4blf1emx.cdn.imgeng.in", "https://bryansandbox.imgix.net"), ect=("https://4blf1emx.cdn.imgeng.in", "https://bryansandbox.imgix.net")'''
