--- a/netlify.toml
+++ b/netlify.toml
@@ -9,5 +9,5 @@
   for = "/*"
   [headers.values]
   accept-ch = "sec-ch-viewport-width, sec-ch-width, sec-ch-dpr, ect"
-  link = "<https://bryansandbox.imgix.net/>; rel=preconnect"
-  permissions-policy = ''' ch-viewport-width=("https://bryansandbox.imgix.net"), ch-width=("https://bryansandbox.imgix.net"), ch-dpr=("https://bryansandbox.imgix.net"), ect=("https://bryansandbox.imgix.net")'''
+  link = "<https://4blf1emx.cdn.imgeng.in/>; rel=preconnect, <https://bryansandbox.imgix.net/; rel=preconnect"
+  permissions-policy = ''' ch-viewport-width=("https://4blf1emx.cdn.imgeng.in", "https://bryansandbox.imgix.net"), ch-width=("https://4blf1emx.cdn.imgeng.in", "https://bryansandbox.imgix.net"), ch-dpr=("https://4blf1emx.cdn.imgeng.in", "https://bryansandbox.imgix.net"), ect=("https://4blf1emx.cdn.imgeng.in", "https://bryansandbox.imgix.net")'''
